Fail properly when module options are invalid